--- a/XamarinRecyclerTest/Resources/layout/Main.axml
+++ b/XamarinRecyclerTest/Resources/layout/Main.axml
@@ -8,4 +8,8 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="Button" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/posts_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
 </LinearLayout>
